Configure multiple printers. Added documentation

--- a/.env.example
+++ b/.env.example
@@ -2,15 +2,7 @@ APP_ENV=local
 APP_DEBUG=true
 APP_KEY=
 
-DB_CONNECTION=mysql
-DB_HOST=localhost
-DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
-
-CACHE_DRIVER=memcached
+CACHE_DRIVER=file
 QUEUE_DRIVER=sync
 
-THERMAL_PRINTER_HOST=null
-WEB_API_TOKEN=null
+CLIENT_API_TOKEN=null
